[metadata]
name = ecrad_pylib
version = 1.0.5
author = Severin S. Denk
author_email = arewedreamingcode@gmail.com
description = Postprocessing and utility library for the Electron Cyclotron Radation transport code for Advanced Data analysis (ECRad)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AreWeDreaming/ECRad_PyLib
project_urls =
    Bug Tracker = https://github.com/AreWeDreaming/ECRad_PyLib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src